wrapped h1 so its no longer global.

--- a/src/css/SalesReport.css
+++ b/src/css/SalesReport.css
@@ -3,7 +3,7 @@
     margin-top: 50px;
   }
   
-  h1 {
+  .report-container h1 {
     font-size: 24px;
     color: #333;
   }
